Fixed horizontal and vertical spacing

--- a/SunsetsIO/wwwroot/css/site.css
+++ b/SunsetsIO/wwwroot/css/site.css
@@ -19,11 +19,12 @@ body {
 
 .centered {
     display: flex;
-    width: 100vw;
-    height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
+    vertical-align: middle;
+    margin-top: 10em;
 }
 
 .loader {
@@ -52,6 +53,10 @@ body {
 
 .time-block {
     border: 1px solid black;
+    aspect-ratio: 1 / 1;
+    height: 100%;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .timeRow {
@@ -61,7 +66,10 @@ body {
     align-items: center;
 }
 
+.timeCol {
+    margin: 1em;
+}
+
 .sunsetTimer {
     display: none;
-    margin-top: 1em;
 }
